// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Signals health score actions render cases ignores unsupported components 1`] = `Array []`;

exports[`Signals health score actions render cases renders an action correctly only when negative 1`] = `Array []`;

exports[`Signals health score actions render cases should render block bounces action 1`] = `
Array [
  Object {
    "content": <React.Fragment>
      <strong>
        You have a high rate of block bounces.
      </strong>
      <br />
      These bounces can be temporary or permanent and are the result of a low reputation at mailbox providers. You may need to contact the postmaster to request mitigation once you make changes to improve your reputation.
    </React.Fragment>,
    "link": "https://www.sparkpost.com/docs/signals/reputation-improvement/",
    "type": "bad",
    "weight": -0.1,
  },
]
`;

exports[`Signals health score actions render cases should render compaints action 1`] = `
Array [
  Object {
    "content": <React.Fragment>
      <strong>
        Your email has an unusually high rate of spam complaints.
      </strong>
      <br />
      These complaints by recipients have a strong negative impact on your overall email deliverability and point to the fact you should make improvements to your list. You should take steps to improve your list hygiene and email content.
    </React.Fragment>,
    "link": "https://www.sparkpost.com/docs/signals/content-refresh/",
    "type": "bad",
    "weight": -0.1,
  },
]
`;

exports[`Signals health score actions render cases should render engaged action 1`] = `
Array [
  Object {
    "content": <React.Fragment>
      <strong>
        Not enough of your recipients have recently engaged with your email.
      </strong>
      <br />
      Engagement is a key factor in your reputation, and low engagement may hurt your email deliverability. Be sure you are sending relevant and desired messages.
    </React.Fragment>,
    "link": "https://www.sparkpost.com/docs/signals/engagement/",
    "type": "bad",
    "weight": -0.1,
  },
]
`;

exports[`Signals health score actions render cases should render hard bounce action 1`] = `
Array [
  Object {
    "content": <React.Fragment>
      <strong>
        Hard bounces are affecting your health score.
      </strong>
      <br />
      It’s not unusual for lists to contain some typos or old addresses that once existed but now have been deleted by the mailbox provider. Removing these non-existent addresses from your recipient lists could improve your overall email deliverability.
    </React.Fragment>,
    "link": "https://www.sparkpost.com/docs/signals/subscriber-acquisition/",
    "type": "bad",
    "weight": -0.1,
  },
]
`;

exports[`Signals health score actions render cases should render list quality action 1`] = `
Array [
  Object {
    "content": <React.Fragment>
      <strong>
        You're sending to a high rate of problematic email addresses.
      </strong>
      <br />
      List quality can be an early determinant of deliverability issues to come. Improving it can help improve your email deliverability and engagement by reducing spam foldering, delays, and blocked messages.
    </React.Fragment>,
    "link": "https://www.sparkpost.com/docs/signals/list-quality/",
    "type": "bad",
    "weight": -0.1,
  },
]
`;

exports[`Signals health score actions render cases should render other bounces action 1`] = `
Array [
  Object {
    "content": <React.Fragment>
      <strong>
        Your emails are being bounced without a clear reason.
      </strong>
      <br />
      These bounces have varied causes, but improving your list quality can help resolve many bounce types.
    </React.Fragment>,
    "link": "https://www.sparkpost.com/docs/signals/list-quality/",
    "type": "bad",
    "weight": -0.1,
  },
]
`;

exports[`Signals health score actions render cases should render transient failures action 1`] = `
Array [
  Object {
    "content": <React.Fragment>
      <strong>
        You are experiencing a high level of temporary bounces.
      </strong>
      <br />
      These delays in email delivery have varied causes, but may be a sign of low reputation at mailbox providers since senders with good reputations may have their messages accepted before others. This can be an early warning sign of other issues to come such as spam foldering or block bouncing.
    </React.Fragment>,
    "link": "https://www.sparkpost.com/docs/signals/reputation-improvement/",
    "type": "bad",
    "weight": -0.1,
  },
]
`;

exports[`Signals health score actions render cases should render unengaged action 1`] = `
Array [
  Object {
    "content": <React.Fragment>
      <strong>
        Too many of your recipients have been inactive for 365 days.
      </strong>
      <br />
      This low engagement may be hurting your email deliverability. You should remove subscribers that have not engaged in the past year and consider segmenting your list to better target interest groups and your most engaged recipients.
    </React.Fragment>,
    "link": "https://www.sparkpost.com/docs/signals/segmentation/",
    "type": "bad",
    "weight": -0.1,
  },
]
`;

exports[`Signals health score actions render cases sorts by weight and only displays first 2 1`] = `
Array [
  Object {
    "content": <React.Fragment>
      <strong>
        You have a high rate of block bounces.
      </strong>
      <br />
      These bounces can be temporary or permanent and are the result of a low reputation at mailbox providers. You may need to contact the postmaster to request mitigation once you make changes to improve your reputation.
    </React.Fragment>,
    "link": "https://www.sparkpost.com/docs/signals/reputation-improvement/",
    "type": "bad",
    "weight": -0.5,
  },
  Object {
    "content": <React.Fragment>
      <strong>
        Hard bounces are affecting your health score.
      </strong>
      <br />
      It’s not unusual for lists to contain some typos or old addresses that once existed but now have been deleted by the mailbox provider. Removing these non-existent addresses from your recipient lists could improve your overall email deliverability.
    </React.Fragment>,
    "link": "https://www.sparkpost.com/docs/signals/subscriber-acquisition/",
    "type": "bad",
    "weight": -0.3,
  },
]
`;
